--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ version: 1.0.0
 # repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: '>=2.19.3 <3.0.0'
+  sdk: ^3.0.1
+
 
 # dependencies:
 #   path: ^1.8.0
@@ -12,3 +13,10 @@ environment:
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.21.0
+  build_runner: ^2.4.5
+  json_serializable: ^6.7.0
+
+dependencies:
+  csv: ^5.0.2
+  http: ^1.0.0
+  json_annotation: ^4.8.1
